0.546 2025-06-02
  [New Features with Incompatibe Changes]
    * Sys->S returns a correct value in Windows.
  [Requirement Changes]
    * Require SPVM 0.990059.
  [Incompatible Changes]
    * Sys::IO::Constant#S_IFSOCK method returns a value.
0.545 2025-05-30
  [Bug Fix]
    * Fix potential bugs related to Windows API, such as Sys#lstat, Sys#stat, Sys#fstat, Sys#l.
  [Internal Changes]
    * Rename Sys::Windows to Sys::Resource::Windows.
      Separete Sys-Windows.h to spvm_sys_windows.h and spvm_sys_windows.c.
    
0.544 2025-05-29
  [Requirement Changes]
    * Windows must support CreateSymbolicLinkW and SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE.
      #define _WIN32_WINNT 0x0A00
  [Big Fix]
    * Fix a bug that SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE is not specified in symlink method.
    * Fix bugs related to wide character in symlink method in Windows.
  [Exception Message Improvement]
    * Exception messages related to system errors contains the value of errno.
0.543 2025-05-28
  [Bug Fix]
    * Fix bugs that Sys#stat, Sys#lstat, Sys#readlink, Sys#_realpath methods fails
      in some cases that the file is opened.
    
0.542 2025-05-27
  [Bug Fix]
    * Fix bugs.
      
      Failed test 'st_dev'
      https://github.com/yuki-kimoto/SPVM-Sys/issues/92
      
      setpriority failed on this environment
      https://github.com/yuki-kimoto/SPVM-Sys/issues/93
      
0.541 2025-05-27
  [Improvement with Incompatible Changes]
    * In this release, UTF-8 strings passed as arguments to the methods that calls Windows system calls are now handled correctly.
      Sys#opendir, Sys::IO#opendir
      Sys#closedir, Sys::IO#closedir
      Sys#readdir, Sys::IO#readdir
      Sys#rewinddir, Sys::IO#rewinddir
      Sys#telldir, Sys::IO#telldir
      Sys#seekdir, Sys::IO#seekdir
      Sys::IO::DirStream#DESTROY
      Sys::IO::Dirent#d_name
      Sys#readlink.
      Sys#lstat, Sys::IO#lstat
      Sys#stat, Sys::IO#stat
  [Incompatible Changes]